# sketcher

./: Cargo.toml  The original inspiration.md
src/: conversion.rs  generator.rs  main.rs
src/comparison/: mod.rs  ssim.rs
src/generator/checker/: dssim.rs  mod.rs
src/generator/sketcher/: background.rs  color_mode.rs  constants.rs  image_proc_sketcher.rs  line.rs  mod.rs
